@@ -1,0 +1,150 @@
+#
+# simple_ai
+#
+# BSD 2-Clause
+# (c) 2017, thorsten.johannvorderbrueggen@t-online.de
+#
+
+# somthing like a simple version check
+name = "simple_ai";
+
+config:
+{
+	  window:
+	  {
+		title = "simple ai demo";
+		size = { w = 1280; h = 720 };
+
+		background = { r = 100; g = 200; b = 100; a = 255 };
+	  };
+
+	  joysticks = (
+	  	{
+			name = "joystick_1";
+			player = "player_1";
+			step = 2;
+		}
+	  );
+
+	  textures = (
+		{
+			name = "player";
+			file = "astronaut_front.png";
+		},
+		{
+			name = "enemie";
+			file = "enemie_simple.png";
+		},
+		{
+			name = "tree";
+			file = "tree_simple.png";
+		},
+		{
+			name = "bush";
+			file = "bush_simple.png";
+		},
+		{
+			name = "rock";
+			file = "rock_simple.png";
+		}
+	  );
+
+	  players = (
+	  	{
+			name = "player_1";
+			texture = "player";
+			pos_x = 100;
+			pos_y = 100;
+		}
+	  );
+
+	  objects = (
+		{
+			name = "fixed_1";
+			texture = "tree";
+			pos_x = 100;
+			pos_y = 300;
+		},
+		{
+			name = "fixed_2";
+			texture = "rock";
+			pos_x = 50;
+			pos_y = 100;
+		},
+		{
+			name = "fixed_3";
+			texture = "tree";
+			pos_x = 600;
+			pos_y = 600;
+		},
+		{
+			name = "fixed_4";
+			texture = "bush";
+			pos_x = 200;
+			pos_y = 600;
+		},
+		{
+			name = "fixed_5";
+			texture = "rock";
+			pos_x = 750;
+			pos_y = 150;
+		},
+		{
+			name = "fixed_6";
+			texture = "bush";
+			pos_x = 400;
+			pos_y = 100;
+		},
+		{
+			name = "fixed_7";
+			texture = "bush";
+			pos_x = 1000;
+			pos_y = 650;
+		},
+		{
+			name = "fixed_8";
+			texture = "bush";
+			pos_x = 1100;
+			pos_y = 150;
+		},
+		{
+			name = "fixed_9";
+			texture = "bush";
+			pos_x = 740;
+			pos_y = 360;
+		},
+		{
+			name = "fixed_10";
+			texture = "tree";
+			pos_x = 420;
+			pos_y = 240;
+		},
+		{
+			name = "fixed_11";
+			texture = "tree";
+			pos_x = 810;
+			pos_y = 570;
+		},
+		{
+			name = "fixed_12";
+			texture = "tree";
+			pos_x = 1090;
+			pos_y = 470;
+		}
+	  );
+
+	  enemies = (
+		{
+			name = "enemie_1";
+			texture = "enemie";
+			pos_x = 1000;
+			pos_y = 300;
+		},
+		{
+			name = "enemie_2";
+			texture = "enemie";
+			pos_x = 500;
+			pos_y = 400;
+		}
+	  );
+}
